--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,1 +1,12 @@
-<p>welcome works!</p>
+<div nz-flex [nzVertical]="isVertical">
+    <div class="flex-item">
+        <div class="content">
+            <h3>To Do</h3>
+            <nz-card class="card-body">
+                <nz-tag nzColor="success">High</nz-tag>
+                <p class="title">Task Title</p>
+                <p class="description">Some description...</p>
+            </nz-card>
+        </div>
+    </div>
+</div>
