--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -3,26 +3,24 @@
   padding: 10px;
   inline-size: 33%;
   block-size: 54px;
-  //   background-color: var(--ant-primary-6);
-  //   background-color: red;
-
-  //   border: solid rgb(148, 42, 42) 1px;
 }
 
 .content {
-  height: max-content;
   padding: 10px;
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  background-color: rgb(212, 225, 233);
-  border-radius: 10px;
+  border-width: 0 1px 0 1px;
 
   .board-title {
     font-size: x-large;
     font-weight: bold;
     margin: 0;
     padding: 0;
+  }
+
+  .count {
+    font-size: smaller;
   }
 }
 
@@ -35,5 +33,16 @@
   .title {
     font-weight: bold;
     font-size: large;
+  }
+
+  .action {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    nz-select {
+      width: 25%;
+    }
   }
 }
