--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,6 @@
         <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
         <h1>Todoo</h1>
       </a>
-      <!-- <a href="https://ng.ant.design/" target="_blank">
-        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-        <h1>Ant Design Of Angular</h1>
-      </a> -->
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
       <li nz-submenu nzOpen nzTitle="Task View" nzIcon="dashboard">
@@ -17,18 +13,8 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/welcome">Kanban</a>
           </li>
-          <!-- <li nz-menu-item nzMatchRouter>
-            <a>Monitor</a>
-          </li> -->
         </ul>
       </li>
-      <!-- <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
-        <ul>
-          <li nz-menu-item nzMatchRouter>
-            <a>Basic Form</a>
-          </li>
-        </ul>
-      </li> -->
     </ul>
   </nz-sider>
   <nz-layout>
@@ -46,3 +32,7 @@
     </nz-content>
   </nz-layout>
 </nz-layout>
+
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-pulse" [fullScreen]="true">
+  <p style="color: white"> Please wait... </p>
+</ngx-spinner>
